--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -7,5 +7,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=(localdb)\\mssqllocaldb;Database=ClientsDB;Trusted_Connection=True;"
   }
 }
